Added sidebar and post component to Home

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -18,6 +18,8 @@
 @import './components/bg-video';
 @import './components/form';
 @import './components/alert';
+@import './components/sidebar';
+@import './components/create-post';
 
 @import './layout/navigation';
 @import './layout/header';
