--- a/client/src/App.css
+++ b/client/src/App.css
@@ -209,11 +209,16 @@ body {
     cursor: pointer;
     height: 100%;
     display: flex;
-    align-items: center; }
-  .user-nav > *:hover {
-    background-color: #f4f2f2; }
+    align-items: center;
+    text-decoration: none;
+    font-family: inherit;
+    color: inherit; }
   .user-nav__icon-box {
     position: relative; }
+    .user-nav__icon-box:hover {
+      background-color: #f4f2f2; }
+  .user-nav__user:hover {
+    background-color: #f4f2f2; }
   .user-nav__icon {
     height: 2.5rem;
     width: 2.5rem;
@@ -235,6 +240,38 @@ body {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+  .user-nav__user {
+    position: relative; }
+  .user-nav__dropdown {
+    z-index: 10;
+    position: absolute;
+    overflow: hidden;
+    height: auto;
+    width: 22.4rem;
+    top: 9.9rem;
+    right: 1rem;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    align-items: flex-end;
+    transition: all 0.3s; }
+    .user-nav__dropdown-item {
+      z-index: 1000;
+      width: 100%;
+      padding: 1rem 0;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      background-color: #f4f2f2;
+      transform-origin: top;
+      transition: all 0.2s;
+      border-top: 1px solid #ccc; }
+      .user-nav__dropdown-item:hover {
+        background-color: #ccc; }
+      .user-nav__dropdown-item__icon {
+        height: 2.5rem;
+        width: 2.5rem;
+        fill: #777; }
 
 .bg-video {
   position: absolute;
@@ -307,6 +344,127 @@ body {
   .alert-invisible {
     opacity: 0; }
 
+.sidebar {
+  grid-row: 1 / -1;
+  grid-column: sidebar-start / sidebar-end;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  padding: 3rem;
+  background-image: linear-gradient(to bottom right, #5680e9, #5ab9ea); }
+  .sidebar__nav {
+    list-style: none;
+    font-size: 1.6rem;
+    font-family: inherit;
+    color: #faf9f9;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 1rem;
+    justify-items: stretch;
+    justify-content: center; }
+    .sidebar__nav-item {
+      padding: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center; }
+      .sidebar__nav-item:hover {
+        background-color: #f4f2f2;
+        color: #5680e9; }
+        .sidebar__nav-item:hover > * {
+          fill: #5680e9; }
+    .sidebar__nav-icon {
+      height: 2.25rem;
+      width: 2.25rem;
+      fill: #faf9f9;
+      margin-right: 1rem; }
+
+.create-post {
+  background-color: #fff;
+  padding: 2rem;
+  align-self: start;
+  transform: scale(1);
+  transition: all 0.2s;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  align-items: start;
+  grid-gap: 1rem; }
+  .create-post__images {
+    display: grid;
+    grid-column: 2 / 3;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 5vw;
+    grid-gap: 1.5rem; }
+  .create-post__image-container {
+    position: relative; }
+  .create-post__image-delete {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    fill: #5680e9;
+    height: 2rem;
+    width: 2rem;
+    transform: scale(1);
+    transition: all 0.2s; }
+    .create-post__image-delete:hover {
+      transform: scale(1.1); }
+    .create-post__image-delete:active, .create-post__image-delete:focus {
+      transform: scale(1); }
+  .create-post__image {
+    object-fit: cover;
+    max-height: 5vw;
+    width: 100%; }
+  .create-post__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center; }
+  .create-post__img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%; }
+  .create-post__text {
+    border-radius: 0.5rem;
+    resize: none;
+    width: 100%;
+    outline: none;
+    font-size: 1.6rem;
+    font-family: inherit;
+    transition: all 0.2s;
+    border: 1px solid #5680e9;
+    padding: 5px; }
+    .create-post__text::placeholder {
+      color: #5680e9; }
+  .create-post__text:active, .create-post__text:focus {
+    border: 2px solid #5ab9ea; }
+    .create-post__text:active::placeholder, .create-post__text:focus::placeholder {
+      color: #777; }
+  .create-post__toolbar {
+    grid-column: 2 / 3; }
+    .create-post__toolbar-container {
+      display: flex;
+      justify-content: space-between; }
+    .create-post__toolbar-icon-container {
+      padding: 1rem;
+      border-radius: 50%;
+      display: flex;
+      justify-items: space-between;
+      justify-content: space-between;
+      align-items: space-between;
+      align-content: space-between;
+      transform: scale(1);
+      transition: all 0.2s; }
+      .create-post__toolbar-icon-container:hover {
+        background-color: #5680e9;
+        transform: scale(1.2);
+        box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+        .create-post__toolbar-icon-container:hover > * {
+          fill: #fff; }
+      .create-post__toolbar-icon-container:active, .create-post__toolbar-icon-container:focus {
+        transform: scale(1);
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+    .create-post__toolbar-icon {
+      fill: #5680e9; }
+
 .header {
   font-size: 1.4rem;
   height: 7rem;
@@ -328,6 +486,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; }
+
+.section-home {
+  display: grid;
+  background-color: #faf9f9;
+  grid-template-columns: [sidebar-start] 25rem [sidebar-end] 35vw 1fr;
+  grid-gap: 5rem;
+  padding: 1rem 30rem;
+  justify-items: stretch; }
 
 .section-landing {
   padding: 15rem 0;
@@ -376,7 +542,7 @@ body {
   background-color: #faf9f9;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 65vh;
+  grid-template-rows: 1fr min-content min-content 1.6fr;
   justify-items: center;
   grid-row-gap: 10rem; }
   .signin__heading {
