--- a/client/src/sass/components/_user-nav.scss
+++ b/client/src/sass/components/_user-nav.scss
@@ -9,14 +9,26 @@
     height: 100%;
     display: flex;
     align-items: center;
+    text-decoration: none;
+    font-family: inherit;
+    color: inherit;
   }
 
   & > *:hover {
-    background-color: $color-grey-light-2;
   }
 
   &__icon-box {
     position: relative;
+
+    &:hover {
+      background-color: $color-grey-light-2;
+    }
+  }
+
+  &__user {
+    &:hover {
+      background-color: $color-grey-light-2;
+    }
   }
 
   &__icon {
@@ -45,5 +57,49 @@
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem;
+  }
+
+  &__user {
+    position: relative;
+  }
+
+  &__dropdown {
+    z-index: 10;
+    position: absolute;
+    overflow: hidden;
+    height: auto;
+    width: 22.4rem;
+    top: 9.9rem;
+    //bottom: -13.5rem;
+    right: 1rem;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    align-items: flex-end;
+    transition: all 0.3s;
+
+    &-item {
+      z-index: 1000;
+      width: 100%;
+      padding: 1rem 0;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      background-color: $color-grey-light-2;
+      transform-origin: top;
+      transition: all 0.2s;
+      border-top: 1px solid $color-grey-light-4;
+
+      &:hover {
+        background-color: $color-grey-light-4;
+      }
+
+      &__icon {
+        height: 2.5rem;
+        width: 2.5rem;
+
+        fill: $color-grey-dark-2;
+      }
+    }
   }
 }
